@@ -142,7 +142,7 @@ Example F: a seismically-isolated building model (units: N, mm, ton)
 
 1                               # 1: include shear deformation
 1                               # 1: include geometric stiffness
-2000                            # exaggerate static mesh deformations
+500                             # exaggerate static mesh deformations
 50.0                            # x-axis increment for internal force data, mm
 
 
@@ -193,7 +193,7 @@ Example F: a seismically-isolated building model (units: N, mm, ton)
 0                               # 0: consistent mass ... 1: lumped mass matrix
 1.00e-6                         # mode shape tolerance
 0.0                             # shift value ... for unrestrained structures
-100                             # exaggerate modal mesh deformations
+200                             # exaggerate modal mesh deformations
 
 
 
